force-app/main/default/objects/Discount_Config__c/Discount_Config__c.object-meta.xml
<CustomObject>
    <description>Used to manage volume discounts for items like batteries</description>
    <label>Discount Config</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Discount Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>