force-app/main/default/objects/Discount_Config__c/fields/Apply_to_All__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the discount will be applied to all units in the order. If unchecked, the discount will only apply to those products in the Min to Max Quantity range</description>
    <inlineHelpText>If checked, the discount will be applied to all units in the order. If unchecked, the discount will only apply to those products in the Min to Max Quantity range</inlineHelpText>
    <label>Apply to All</label>
    <type>Checkbox</type>
</CustomField>