force-app/main/default/objects/Discount_Config__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with Cash purchases</description>
    <inlineHelpText>Checked if the discount config is eligible with Cash purchases</inlineHelpText>
    <label>Cash</label>
    <type>Checkbox</type>
</CustomField>