force-app/main/default/objects/Discount_Config__c/fields/Eligible_Financiers__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Financiers__c</fullName>
    <description>List of all eligible financiers for the discount config.</description>
    <formula>IF(Cash__c, &quot;Cash&quot;, &quot;&quot;) &amp; 
IF(Cash__c &amp;&amp; (EnFin__c || Everbright__c || Mosaic__c || Sunrun__c || Goodleap__c), &quot;, &quot;, &quot;&quot;) &amp;
IF(EnFin__c, &quot;Enfin&quot;, &quot;&quot;) &amp; 
IF(EnFin__c &amp;&amp; (Everbright__c || Mosaic__c || Sunrun__c || Goodleap__c), &quot;, &quot;, &quot;&quot;) &amp;
IF(Everbright__c, &quot;Everbright&quot;, &quot;&quot;) &amp; 
IF(Everbright__c &amp;&amp; (Mosaic__c || Sunrun__c || Goodleap__c), &quot;, &quot;, &quot;&quot;) &amp;
IF(Mosaic__c, &quot;Mosaic&quot;, &quot;&quot;) &amp; 
IF(Mosaic__c &amp;&amp; (Sunrun__c || Goodleap__c), &quot;, &quot;, &quot;&quot;) &amp;
IF(Sunrun__c, &quot;Sunrun&quot;, &quot;&quot;) &amp; 
IF(Sunrun__c &amp;&amp; Goodleap__c, &quot;, &quot;, &quot;&quot;) &amp;
IF(Goodleap__c, &quot;Goodleap&quot;, &quot;&quot;)</formula>
    <inlineHelpText>List of all eligible financiers for the discount config.</inlineHelpText>
    <label>Eligible Financiers</label>
    <type>Text</type>
</CustomField>