force-app/main/default/objects/Discount_Config__c/fields/EnFin__c.field-meta.xml
<CustomField>
    <fullName>EnFin__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with EnFin</description>
    <inlineHelpText>Checked if the discount config is eligible with EnFin</inlineHelpText>
    <label>EnFin</label>
    <type>Checkbox</type>
</CustomField>