force-app/main/default/objects/Discount_Config__c/fields/Everbright__c.field-meta.xml
<CustomField>
    <fullName>Everbright__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with Everbright</description>
    <inlineHelpText>Checked if the discount config is eligible with Everbright</inlineHelpText>
    <label>Everbright</label>
    <type>Checkbox</type>
</CustomField>