force-app/main/default/objects/Discount_Config__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <description>Type of Financier used for discount to be applied</description>
    <inlineHelpText>Type of Financier used for discount to be applied</inlineHelpText>
    <label>Finance Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>TPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>