force-app/main/default/objects/Discount_Config__c/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <description>Description of finance option used
CASE( Finance_Type__c,
&quot;TPO&quot;, State__r.TPO_Financier__r.Name,
&quot;Cash&quot;, &quot;Cash&quot;,
&quot;Loan&quot;, State__r.Loan_Product__c,
null)</description>
    <formula>&quot;&quot;</formula>
    <label>Financier</label>
    <type>Text</type>
</CustomField>