force-app/main/default/objects/Discount_Config__c/fields/Goodleap__c.field-meta.xml
<CustomField>
    <fullName>Goodleap__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with Goodleap</description>
    <inlineHelpText>Checked if the discount config is eligible with Goodleap</inlineHelpText>
    <label>Goodleap</label>
    <type>Checkbox</type>
</CustomField>