force-app/main/default/objects/Discount_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the product is available for the given discount contig, state and financier. If unchecked, it&apos;s not available.</description>
    <inlineHelpText>If checked, the product is available for the given discount contig, state and financier. If unchecked, it&apos;s not available.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>