force-app/main/default/objects/Discount_Config__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <description>Maximum number of units required in order for discount to qualify for product</description>
    <label>Max Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>