force-app/main/default/objects/Discount_Config__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <description>Minimum number of units required in orderr for discount to apply</description>
    <label>Min Quantity</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>