force-app/main/default/objects/Discount_Config__c/fields/Mosaic__c.field-meta.xml
<CustomField>
    <fullName>Mosaic__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with Mosaic</description>
    <inlineHelpText>Checked if the discount config is eligible with Mosaic</inlineHelpText>
    <label>Mosaic</label>
    <type>Checkbox</type>
</CustomField>