force-app/main/default/objects/Discount_Config__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Adjusted price of the product for the State / Product / Financier combination</description>
    <inlineHelpText>Adjusted price of the product for the State / Product / Financier combination</inlineHelpText>
    <label>Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>