force-app/main/default/objects/Discount_Config__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product to which the discount will be applied</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product must be active</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discount Configs</relationshipLabel>
    <relationshipName>Discount_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>