force-app/main/default/objects/Discount_Config__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Family of the associated product</description>
    <formula>Text(Product__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>