force-app/main/default/objects/Discount_Config__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <description>Image of the product</description>
    <formula>IF(
    ISBLANK(Product__r.Product_Image_URL__c), 
    &quot;&quot;, 
    IMAGE(&apos;/resource/&apos; + Product__r.Product_Image_URL__c, &quot;Product Image&quot;, 100, 100)
)</formula>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>