force-app/main/default/objects/Discount_Config__c/fields/Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Key__c</fullName>
    <description>Product Key for sorting based on Product Name, State and Quantity</description>
    <formula>UPPER(Product_Family__c) &amp; &quot;|| &quot; &amp;
Product__r.Name &amp; 
IF(ISBLANK( State__c ), &quot; --ALL-- &quot;, &quot; --&quot; &amp;  State__r.Name  &amp; &quot;-- &quot;) &amp;
IF(INCLUDES(Finance_Type__c, &quot;CASH&quot;), &quot;CASH &quot;, null) &amp; IF(INCLUDES(Finance_Type__c, &quot;LOAN&quot;), &quot;LOAN &quot;, null) &amp; IF(INCLUDES(Finance_Type__c, &quot;TPO&quot;), &quot;TPO &quot;, null) &amp;
&quot;Qty: &quot; &amp; TEXT(Min_Quantity__c)</formula>
    <inlineHelpText>Product Key for sorting based on Product Name, State and Quantity</inlineHelpText>
    <label>Product Key</label>
    <type>Text</type>
</CustomField>