force-app/main/default/objects/Discount_Config__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the State record this applies to</description>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>State__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Discount Configs</relationshipLabel>
    <relationshipName>Discount_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>