force-app/main/default/objects/Discount_Config__c/fields/Sunrun__c.field-meta.xml
<CustomField>
    <fullName>Sunrun__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the discount config is eligible with Sunrun</description>
    <inlineHelpText>Checked if the discount config is eligible with Sunrun</inlineHelpText>
    <label>Sunrun</label>
    <type>Checkbox</type>
</CustomField>