force-app/main/default/objects/Discount_Config__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <description>How the Min and Max quantity will be evaluated</description>
    <inlineHelpText>How the Min and Max quantity will be evaluated</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Per Watt</fullName>
            </value>
            <value>
                <fullName>Bid Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>