force-app/main/default/objects/Discount_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Product__c</columns>
    <columns>State__c</columns>
    <columns>Price__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Apply_to_All__c</columns>
    <columns>Finance_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>